# Zcom

./: README.md  README.zh.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: index.html  multi.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checksum.rs  encoding_utils.rs  lib.rs  main.rs  mcp_buffer.rs  mcp_server.rs  multi_string.rs  receive_buffer.rs  serial_cmd.rs  state.rs  window_helper.rs
src/css/: style.css
src/js/: app.js  bottom.js  icons.js  keybindings.js  menu.js  multi.js  receive.js  settings.js  statusbar.js  titlebar.js  utils.js  view.js
