[package]
name = "zcom"
version = "0.4.0"
description = "High performance serial debug assistant"
authors = ["zt"]
edition = "2021"

[lib]
name = "zcom_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial2 = "0.2"
tokio = { version = "1", features = ["full"] }
crc = "3"
log = "0.4"
env_logger = "0.11"
encoding_rs = "0.8"
tauri-plugin-window-state = "2"
